# vector-visualizer

./: CMakeLists.txt  README.md
include/: GUI.h  add_vector.h  button_base.h  screen_action.h  transformCalc.h  type_def.h  vector_loader.h  vector_manager.h  vector_type.h
src/: CMakeLists.txt  GUI.cpp  add_vector.cpp  main.cpp  screen_action.cpp  transformCalc.cpp  vector_loader.cpp
test/src/: CMakeLists.txt
test/src/GUI_test/: CMakeLists.txt  gui_test.cpp
test/src/vector_test/: CMakeLists.txt  vector_test.cpp
